# camtu

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: main.rs
apps/mobile/: .prettierignore  babel.config.js  eslint.config.js  metro.config.cjs  package.json  tsconfig.json
apps/mobile/android/: gradle.properties  settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/android/app/src/main/java/com/camtu/: CamtuForegroundServiceModule.kt  CamtuForegroundServicePackage.kt  ForegroundStreamingService.kt  MainApplication.kt
apps/mobile/ios/: Podfile
apps/mobile/ios/camtu/: Info.plist
apps/mobile/ios/camtu.xcodeproj/: project.pbxproj
apps/mobile/src/: App.tsx
apps/web/: .prettierignore  eslint.config.js  index.html  package.json  prettier.config.js  vite.config.js
apps/web/src/: App.tsx  app.tsx  globals.css  main.tsx
apps/web/src/components/: window-controls.tsx  window-title-bar.tsx
crates/platform-linux/: Cargo.toml
crates/platform-macos/: Cargo.toml
crates/platform-windows/: Cargo.toml
